# My.JDownloader-API

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python_publish.yml
my_jd_api/: __init__.py  commands.py  const.py  exception.py
my_jd_api/commands/: __init__.py  captcha.py  config.py  device.py  download_controller.py  downloads.py  jd.py  linkgrabber.py  myjdapi.py  system.py  toolbar.py  update.py
tests/: test_my_jd_api.py
