[tool.poetry]
name = "my_jd_api"
version = "2.0.0"
description = "Library to use My.JDownloader API in an easy way"
authors = ["rapjul <46605047+rapjul@users.noreply.github.com>"]
license="MIT"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords=[
    "my_jd_api",
    "jdownloader",
    "jdownloader2",
    "my.jdownloader",
    "api",
]

[tool.poetry.scripts]
my_jd_api = "my_jd_api.commands:connect"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pycryptodome = "^3.15.0"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pylint = "^2.14.5"

[tool.isort]
profile = "black"
force_grid_wrap = 0
use_parentheses = true
known_first_party = "my_jd_api"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
